--- a/color-culture-app/server/package.json
+++ b/color-culture-app/server/package.json
@@ -5,17 +5,18 @@
     "main": "server.js",
     "scripts": {
       "start": "node server.js",
-      "watch": "nodemon server.js"
+      "watch": "nodemon server.js",
+      "seed": "node seeders/seed.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "apollo-server-express": "^3.6.2",
+      "apollo-server-express": "^3.6.1",
       "bcrypt": "^4.0.1",
       "express": "^4.17.1",
-      "graphql": "^16.3.0",
       "jsonwebtoken": "^8.5.1",
+      "graphql": "^16.2.0",
       "mongoose": "^7.0.2"
     },
     "devDependencies": {
