added react routes

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "color-culture-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "swiper": "^10.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router-dom": "^6.2.1",
+    "graphql": "^15.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
