--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "concurrently": "^5.1.0"
     },
     "dependencies": {
-        "lottie-react": "^2.4.0"
+        "lottie-react": "^2.4.0",
+        "mongodb": "^5.7.0"
     }
 }
